finally it's working

--- a/package.json
+++ b/package.json
@@ -1,11 +1,26 @@
 {
   "name": "testproject",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "cd app && ../node_modules/http-server/bin/http-server",
+    "webdriver-manager": "./node_modules/protractor/bin/webdriver-manager",
+    "protractor": "./node_modules/protractor/bin/protractor"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/hnamitha1/toApptest.git"
+  },
+  "bugs": {
+    "url": "https://github.com/hnamitha1/toApptest/issues"
+  },
+  "homepage": "https://github.com/hnamitha1/toApptest#readme",
+  "description": "",
+  "dependencies": {
+    "http-server": "^0.9.0",
+    "protractor": "^3.3.0"
+  }
 }
